--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.10.0"
+    "react": "^0.12.2"
   },
   "devDependencies": {
     "jsx-loader": "^0.10.2",
-    "webpack": "^1.3.0-beta5",
+    "webpack": "^1.7.3",
     "rf-release": "^0.1.2"
   },
   "tags": [
